# Synthia

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  basic_io.c  basic_io.h  data_y_splitter.c  data_y_splitter.h  display_control.c  display_control.h  global_header.h  idf_component.yml  main.c  note_handler.c  note_handler.h  sequencer.c  sequencer.h  synth_audio.c  synth_audio.h  uart_handler.c  uart_handler.h  ui.c  ui.h  waveform_tables.c  waveform_tables.h
tools/: c_bar_weighting_table_generator.py  c_frequency_table_generator.py  c_function_table_generator.py  c_low_pass_table_generator.py
